Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -107,23 +107,13 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \section{Introduction}\label{introduction}
 
-Admixture, i.e.~gene flow between isolated populations,
- is of fundamental importance in evolution. In 
-speciation, the  
-potential to admix is used as a classical criterion to define  species as the concept underlying  reproductive
-isolation in the biological species concept (\cite{mayr_animal_1963}).
+Admixture, i.e. gene flow between populations, is a major evolutionary force that shapes genetic diversity and allows the exchange of beneficial variants. Genomic studies have shown that admixture is prevalent across species (\cite{Salazar_Hybrid_speciation_2010, rieseberg_hybridization_2007,kronforst_multilocus_2006,kolbe_multiple_2007}) and facilitates adaptation (\cite{harrison_hybridization_2014,hedrick_adaptive_2013, shaw_genes_2011,payseur_using_2010}).
 
-More recently, genomic studies have widely shown that admixture is present between many well-established species that are morphological, geographical and/or behaviorally differentiated. The well-known examples include many butterflies, sunflowers and lizards (\cite{Salazar_Hybrid_speciation_2010, rieseberg_hybridization_2007,kronforst_multilocus_2006,kolbe_multiple_2007}). 
-
-Within species, gene flow is a major evolutionary force  shaping genetic diversity, as it facilitates exchange of variants between populations
-(\cite{harrison_hybridization_2014}). Genomic methods that investigate the selective effect of such variants  are a major force of current research (\cite{hedrick_adaptive_2013,
-shaw_genes_2011,payseur_using_2010}).
-
-The advent of wide-spread full-genome sequencing methods makes it easier to detect admixture event
+The advent of wide-spread full-genome sequencing methods makes it easier to detect admixture events
 between populations (\cite{sousa_understanding_2013}). In humans, the sequencing of
 the Neandertal genome (\cite{green_draft_2010}) revealed that all humans outside Africa carry low proportions of Neandertal ancestry
 (\cite{green_draft_2010,prufer_complete_2013,vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,prufer_high-coverage_2017}). In addition, the  Denisovan genome (\cite{reich_genetic_2010})
-showed low proportion of Denisovan ancestry being widespread in Oceania and to a smaller extent in East-Asia
+showed low proportions of Denisovan ancestry being widespread in Oceania and to a smaller extent in East-Asia
 (\cite{reich_genetic_2010,meyer_high-coverage_2012,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}).
 This genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations can also help resolving the timing and duration of contact by genetically dating the admixture.
 Moreover, additional to archaeological records of Neandertals, the admixture can hint to the time of their disappearance assumed to be at the end of the Mousterian around 41,030–39,260 calibrated years before present (yBP) (\cite{higham_timing_2014}), based on archaeological data. 
@@ -144,16 +134,8 @@ Hence, using this 'recombination clock', the length distribution of introgressed
 admixture event 
 (\cite{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}).
 
-The most widely used model of gene flow is one where gene flow is constant through time (\cite{nielsen_distinguishing_2001,hey_multilocus_2004}), which does not have a time component. However, for dating admixture, it is generally assumed that gene flow
-happens over a very short time period, in a single \textit{admixture pulse} (\cite{moorjani_history_2011}), usually modelled as a single generation
-of gene flow. While convenient for inference, one cannot use this approach to distinguish an extend period of gene flow from an admixture pulse (\cite{pickrell_toward_2014}). Here, we are chiefly interested in gene flow between Neandertals and modern humans. Dating this gene flow event accurately would inform several questions of  great importance, but not always the same aspect of the gene flow is the one of primary interest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
-In contrast, the date of the most recent gene flow between Neandertals and modern humans may be informative for dating the extinction of Neandertals. Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated.
 
-Thus, our goal here is to examine when an admixture pulse can be rejected for more general models of continuous gene flow.  For this purpose, we explore both technical and biological factors influencing the inferred length of admixture pulses, to gauge their relative importance.
-
-\subsection{The two approaches of obtaining the length of introgressed
-segments:
-ALD}\label{the-two-approaches-of-obtaining-the-length-of-introgressed-segments-ald}
+\subsection{The two approaches and their application to find archaic admixture dates}\label{the-two-approaches-and-their-application-to-find-archaic-admixture-dates}
 
 The first step in dating admixture events from genetic data is estimating the length distribution of admixture segments.  There are two main approaches for this; a first approach is to use patterns of linkage along a chromosome to estimate the length distribution, without explicitly inferring the genomic location of these segments. In contrast, a second set of methods first aims to identify all admixture segments over a certain length, and then use these segments for inference. 
 (\cite{chimusa_dating_2018}) (Figure \ref{fig:Intro_fig} A).
@@ -166,25 +148,10 @@ of admixture
 admixture event a few tens of generations ago, ALD stretches  over long genetic distances
 (\cite{patterson_methods_2004}) and is therefore easily distinguishable
 from short range LD due to other processes (\cite{moorjani_history_2011}). For ancient
-admixture events however, ALD is quite similar to the genomic background. To circumvent this issue, LD is calculated on ascertained markers that show a large allele frequency difference between the admixing populations, i.e. in the context of Neandertals and modern humans, LD is calculated only for markers that are nearly differentially fixed between the two taxa. In this case, the presence of apparent Neandertal alleles in close-range LD is a signature of a locally introgressed locus.
+admixture events however, ALD is quite similar to the genomic background. To circumvent this issue for dating the Neandertal-human admixture time, an ascertainment scheme was used to calculate LD only for markers that are nearly differentially fixed between the two taxa. In this case, the presence of apparent Neandertal alleles in close-range LD is a signature of a locally introgressed locus
 (\cite{sankararaman_date_2012}). Typically, estimation of admixture time proceeds by fitting a decay curve of pairwise LD as a function of
 genetic distance, using an exponential distribution whose parameters are informative for the time of the admixture pulse
-(\cite{moorjani_history_2011,loh_inferring_2013}).
-
-\subsection{The two approaches of obtaining the length of introgressed
-segments: searching for introgressed
-haplotypes}\label{the-two-approaches-of-obtaining-the-length-of-introgressed-segments-searching-for-introgressed-haplotypes}
-
-A second set of approaches works by first inferring the admixture segments
-(\cite{gravel_population_2012,price_sensitive_2009}). This step is largely independent from the later dating, and can be done using a variety of methods.(\cite{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
-
-\subsection{Dates of archaic introgression obtained so
-far}\label{dates-of-archaic-introgression-obtained-so-far}
-
-Both approaches have been used to estimate the time of admixture between
-Neandertals and modern humans assuming a one generation admixture pulse.
-Using the decay of introgressed Neandertal variants in modern day
-genomes, Sankararaman et al. dated the Neandertal-human admixture time to
+(\cite{moorjani_history_2011,loh_inferring_2013}). Using this approach Sankararaman et al. dated the Neandertal-human admixture time to
 be  between 37,000--86,000 ya (years ago) (\cite{sankararaman_date_2012}). Later,
 this date was refined to 40,510--54,454 ya (95\% CI) using a different
 ascertainment scheme combined with a different genetic map
@@ -194,11 +161,8 @@ ancient individual, by the decay of pairwise covariance between
 introgressed SNPs, to the specimens radiocarbon date
 (\cite{fu_genome_2014}).
 
-An additional admixture event between Neandertals and East-Asian
-populations at the same time as the admixture between Neandertals and
-all non-Africans was suggested to explain the higher amount of
-Neandertal ancestry in present-day East Asians
-(\cite{kim_selection_2015,vernot_complex_2015}). 
+A higher amount of Neandertal admixture segments in present-day East-Asians was identified by using the second set of approaches. To explain the higher amount of Neandertal ancestry in these populations a second admixture event was suggested at the same time as the admixture between Neandertals and
+all non-Africans (\cite{kim_selection_2015,vernot_complex_2015}).  The identification of segments is largely independent from the later dating, and can be done using a variety of methods.(\cite{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
 
 The Denisovan human
 admixture time point was dated to lie in the interval between 44,000--54,000 ya using the ALD
@@ -214,10 +178,20 @@ admixture events with Denisovans, one in line with previous estimates at
 be around 29.8 kya (95\% CI 14.4-50.4 kya)
 (\cite{jacobs_multiple_2019}).
 
+Here, we are manly interested in the gene flow model these studies used and its implication.
+
+The most widely used model is one where gene flow is constant through time (\cite{nielsen_distinguishing_2001,hey_multilocus_2004}), which does not have a time component. However, for dating admixture, it is generally assumed that gene flow
+happens over a very short time period, in a single \textit{admixture pulse} (\cite{moorjani_history_2011}), usually modelled as a single generation
+of gene flow. While convenient for inference, one cannot use this approach to distinguish an extend period of gene flow from an admixture pulse (\cite{pickrell_toward_2014}). 
+Here, we are chiefly interested in gene flow between Neandertals and modern humans, which was previously modeled assuming a one-generation pulse of admixture. Dating this gene flow event accurately would inform several questions of  great importance, but not always the same aspect of the gene flow is the one of primary interest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
+In contrast, the date of the most recent gene flow between Neandertals and modern humans may be informative for dating the extinction of Neandertals. Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated.
+
+Thus, our goal here is to examine when an admixture pulse can be rejected for more general models of continuous gene flow.  Using a continuous model, we are interested in establishing the start and end of admixture between Neandertals and modern humans, not just the mean admixture time. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard . Thus, we also need to carefully evaluate the potential technical and biological factors that may introduce additional biases (\cite{pool_inference_2009,gravel_population_2012,liang_lengths_2014}).
+For this purpose, we explore these factors influencing the inferred length of admixture pulses, to gauge their relative importance.
+
+
+
 \subsection{Assumptions on the data}\label{assumptions-on-the-data}
-Here, we are interested in establishing the start and end of admixture between Neandertals and modern humans, not just the mean admixture time. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard . Thus, we also need to carefully evaluate the potential technical and biological factors that may introduce additional biases (\cite{pool_inference_2009,gravel_population_2012,liang_lengths_2014}).
-
-
 
 In general the model assumes that introgressed segments are rare and inbreeding is not significant (\cite{pool_inference_2009}). The segments act neutral (\cite{shchur_distribution_2019}) and the recombination clock is constant over time and populations (\cite{gravel_population_2012}). We will adopt these assumptions. Instead we focus on the one-generation pulse and technical assumptions. It is usually assumed that the demography is known or its effects negligible, the recombination map known or recombination is constant. Beside that is is assumed that the ascertainment scheme sufficiently represent the variation in the true introgressing archaic population.
 
@@ -300,9 +274,9 @@ ancestry in Africans. Each simulation was repeated 100 times.
 
 \subsubsection{Gene Flow}\label{gene flow}
 
-In the admixture pulse model, gene flow is a one generation long
+In the admixture pulse model, gene flow is a one generation long pulse
 resulting in an exponentially distributed admixture-induced linkage
-disequilibrium (ALD) decay curve (Eq. \ref{eq:1}), with \(\lambda\) as
+disequilibrium (ALD) decay curve (Eq. \ref{eq:1}), with  $\lambda = -td$ as
 the rate parameter of the exponential distribution holding the inverse
 of time since the admixture event \(t\) as a function of genetic
 distance \(d\),
@@ -326,7 +300,7 @@ m_i \sim \Gamma(k+1,\frac{1}{\theta})
 Where k is the shape and \(\theta\) the rate parameter. The parameter
 values are chosen such that the mean length \(\frac{1}{\lambda}\) of the
 exponentially distributed ALD decay curve resulting from the one
-generation admixture pulse, is equal to the mean length of a ALD decay
+generation admixture pulse, is equal to the mean length of the ALD decay
 curve, as a result of continuous migration with the same total amount of
 migrants, modeled using a Lomax distribution (Eq. \ref{eq:3})
 
@@ -356,7 +330,7 @@ equal. Here \(x\) is in generations.
 
 Uncertainties in the recombination map were previously shown to bias
 admixture time estimates. To investigate the effect of more realistic
-recombination rate variation we simulated using a recombination map. We
+recombination rate variation we simulated samples using a recombination map. We
 either used the African-American-Map (\cite{hinch_landscape_2011}) or
 the HapMap phase 3 (\cite{HapMapConsortium_second_2007}) for simulations
 under a variable recombination rate, for simplicity, we used the same
@@ -365,19 +339,20 @@ for all simulated chromosomes. The mean recombination rate was
 calculated from the 150 Mb map (\(1.843 \, \frac{cM}{Mb}\) AAMap and
 \(1.549 \, \frac{cM}{Mb}\) HapMap). To emulate uncertainties in the
 genetic map we either used the mean recombination rate from the
-respective map to calculate the genetic position from the physical
-position for each SNP, used linear interpolation based on the other map
+respective map to calculate the genetic distance from the physical
+distance for each SNP. We used the other map to assign distances by linear interpolation
 (e.g.~AAMap used for the msprime simulation and HapMap used to assign
 genetic distances) or used the same map for simulation and assigning
 genetic distances.
 
-\subsubsection{Inferred demography}\label{inferred demography}
+\subsubsection{Complex demography}\label{inferred demography}
 
 Demography such as population size changes are known to influence LD
 patterns and hence create false admixture signals. To test the impact of
 demographic history on admixture time estimates, we simulate a more
-realistic and complex demographic history based on effective population
-sizes and split times estimated from Neandertal and present-day human
+realistic and complex demographic history with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neandertal admixture (Figure \ref{fig:Intro_fig} B) . The 
+effective population
+sizes are based on estimated from Neandertal and present-day human
 genomes. MSMC estimates from YRI as representatives for Africans and CEU
 for non-Africans from Schiffles \& Durbin 2014
 (\cite{schiffels_inferring_2014}) were used together with PSMC
@@ -392,9 +367,8 @@ Second, since the original estimates are based on a different mutation
 rates (\(1.25*10^{-8} \frac{bp}{gen}\)), we corrected all estimates for
 the mutation rate used in the simulations
 (\(2*10^{-8} \frac{bp}{gen}\)). The split times between Neandertals and
-modern humans as well as between Africans and non-Africans were kept the
-same as in the simple simulations (1000 and 2550 generations ago,
-respectively). The population size of the ancestor of Neandertals and
+modern humans was kept the
+same as in the simple simulations (2550 generations ago). The population size of the ancestor of Neandertals and
 humans before the split was set to 1000. To simulate branch shortening
 caused by the extinction of Neandertals, Neandertals were sampled 750
 generations before the Africans and non-Africans.
@@ -424,7 +398,7 @@ distance \(d\) apart was calculated using ALDER
 SNPs is set either to 0.02 cM and 0.05 cM. This minimal distance cutoff
 removes extreme short range LD likely confounded by non-ALD,
 facilitating the fitting procedure. To obtain the mean time estimates
-the data is fitted with an exponential distribution shown in equation
+the data is fitted with an exponential distribution (one generation pulse model) shown in equation
 \ref{eq:5}, using a non-linear least-square optimization algorithm
 implemented in R (\cite{R_Core_Team_2019}). Where \emph{A} is the
 intercept, \(t\) the time since the admixture event in generations,
@@ -649,7 +623,7 @@ advantages:
     \item The segment length distribution $L_i$ follows a Lomax-distribution, i.e. has the analytical density $Pr(L=l) = \frac{k \lambda t}{(1 + \lambda l t)^{k+1}}$
     \item The cdf is $Pr(L > l) = (1+\lambda l t )^{-k}$
     \item The mean segment-length is  $\frac{1}{\lambda t}$ for all $k > 0$, and undefined otherwise. 
-    \item As $k$ approaches infinity, we recover the exponential distribution. Thus, if tract length are directly inferred, one can use a likelihood-ratio test to distinguish continuous from discrete gene flow. As the special case of exponentially lies on the boundary of the parameter space, the test-statistic does not follow a $\chi^2$-distribution (\cite{Kozubowski_Testing_2008}). This is however is not possible when segment length are indirectly inferred by ALD.
+    \item As $k$ approaches infinity, we recover the exponential distribution. Thus, if tract length are directly inferred, one can use a likelihood-ratio test to distinguish continuous from discrete gene flow. As the special case of exponentially lies on the boundary of the parameter space, the test-statistic does not follow a $\chi^2$-distribution (\cite{Kozubowski_Testing_2008}). This however is not possible when segment length are indirectly inferred by ALD.
 \end{itemize}
 
 Using this model we i) examining the effect of continuous admixture on
@@ -676,11 +650,9 @@ from msprime simulations}
 
 \subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
 
-To asses the effect of continuous admixture on the admixture
-time estimates assuming a pulse model, calculated from modern human populations, we compared two
-models of admixture between Neandertals and non-Africans using
-coalescent simulations. The simplified model of a pulse like gene flow
-and a continuous admixture event with several generations of gene flow.
+
+To asses the effect of estimating admixture time assuming a one-generation pulse when the real gene flow is actually continuous over multiple generations,
+we compared the deviation from the true mean time of admixture for simulations under a one-generation pulse with the one of multi-generation continuous gene flow with the same mean time. We took the scenario of Neandertal admixture into non-Africans simulated using coalescent simulations.
 The total amount of gene flow \(m\) from Neandertals into non-Africans
 in the two models is equal. Gene flow is modeled using a Gamma
 distribution (Eq. \ref{eq:2}) holding the migration rate per generation
@@ -697,13 +669,10 @@ Figure \ref{fig:fig1} C shows the resulting weighted LD for different
 length of continuous admixture ranging from a one generation pulse to
 1500 generations.
 
-Comparing estimates for different mean admixture times ranging from 250
-generations ago to 2000 generations ago, simulated either with a pulse
-or a continuous admixture with a length of 50 \% of the mean admixture
-time, reveals minor deviations between the two scenarios and the true
+We compared estimates for different mean admixture times ranging from 250 generations ago to 2000 generations ago. We either used a pulse-like gene flow model where the gene flow is only one generation long or a continuous gene flow model for the simulations. The duration of gene flow under the continuous model is 50\% of the mean time (if the mean time is 250 generations ago gene flow ranges from 325 to 175 generations ago). Assuming only a one generation pulse to estimated the mean time, revealed only minor deviations between the two scenarios and the true
 admixture time of 3\% to 5\% for the pulse and 1\% to 7\% for the
 continuous (Figure \ref{fig:fig2} A). Estimates for mean admixture times
-older than 1000 generations show a slight overestimation, which is
+older than 1000 generations showed a slight overestimation, which is
 lesser for the estimates of simulations under a continuous gene flow .
 The slight overestimation is consistent with the findings of previous
 studies estimating ancient admixture times using modern admixed
@@ -725,7 +694,7 @@ estimates between the two scenarios of \textasciitilde{}100 generations
 in the most extreme case are moderate compared to the mean admixture
 time of 1500 generations.
 
-In conclusion, the differences in mean time estimates between a pulse and a continuous admixture using a pulse model are moderate making point estimates for mean admixture time compatible with long continuous admixture.
+In conclusion, the differences in mean time estimates between a pulse and a continuous admixture assuming a one-generation pulse are moderate making point estimates for mean admixture time compatible with long continuous admixture.
 
 In conclusion, point estimates for the mean time of admixture under a pulse model are relatively accurate even for very long continuous admixture scenarios, making its effect on the estimate marginal.
 
@@ -745,19 +714,69 @@ flow. Boxplot created from 100 simulation replicates, respectively.}
 
 Having established that the duration of continuous admixture under ideal
 circumstances is only marginally influential on admixture time
-estimates, we want to compare its effect to more realistic simulation scenarios. Specifically,
-we investigated the influence of two analysis parameter by changing the
-ascertainment scheme to a Higher-Enrichment Ascertainment scheme (HES) requiring additional
-to the LES non-Africans to be polymorphic at a SNP, and applying a
-larger minimal distance of 0.05 cM between SNPs used for the fitting of
-the exponential distribution. Additionally, we changed the demographic
-model from a simple to a complex one based on inferred effective
-population sizes. We included deep structure in the
-ancestral African-non-African population and a gene flow event between
-Africans and non-Africans after the Neandertal admixture event (Figure
-\ref{fig:Intro_fig} B). We further applied the African-American-Map to
-simulate varying recombination rates across the 150 Mb long chromosomes,
-instead of a constant rate. We simulated every combination of these
+estimates, we want to compare its effect to more realistic simulation scenarios. Several things were assumed implicitly in the first simulation steps, which are common assumptions when estimating admixture times.
+
+First, it is assumed that the recombination rates are known. We know
+that the recombination process does not follow a strict Poisson process
+with recombination events occurring on a constant rate. Rather there are
+hotspots of high recombination throughout the genome
+(\cite{mcvean_fine-scale_2004}). Hence, the physical length of an
+introgressed segment does not simply correlate to its genetic distance,
+and as such a recombination map is used to assign a genetic distance to
+the segments. Since the recombination is used as a clock,
+misspecification of the recombination map will lead to over/or
+underestimates of segment lengths/ genetic distance between introgressed
+variants, and eventually admixture times. Crucially, even if the length estimation
+is unbiased, the admixture time estimates can be substantially biased
+(\cite{sankararaman_date_2012,fu_genome_2014}).
+These uncertainties in the genetic map were
+found to downward bias the Neandertal-human admixture time estimates by
+missing certain recombination events resulting in assuming introgressed
+segments longer than they actually are.  This resulted in dates
+estimated around 20 \% younger in previous studies(\cite{sankararaman_date_2012}). We used the African-American genetic map of chromosome 1 for our simulations and only its mean recombination rate to assign a genetic length between a pair of SNPs, to check the effect of uncertainties in the variation of recombination events. We compared this admixture time estimates under the varying recombination map to the former used constant one.
+
+A second assumption we investigated is that the demographic history of the studied
+population is known.
+
+This is relevant because, while demography does not alter the
+recombination clock significantly, it can create false signals of
+admixture (\cite{vernot_resurrecting_2014,hsieh_whole-genome_2016}) by
+generating segments rich in divergent variantas in high LD to each
+other. Figure \ref{fig:Intro_fig} B shows the two demographies of
+the Neandertal admixture used throughout this study. The simplified one without population size
+changes was used till now. To check for the effect of demography we used a more complex model including substructure in the ancestral human
+population, where human populations in Africa are subdivided with a low
+migration rate, which can also
+introduce divergent chromosomal segment with variants in strong LD,
+mimicking Archaic introgressed segments
+(\cite{nei_linkage_1973,pfaff_population_2001}). Genomic segments
+carrying these signals can falsely be identified as introgressed and
+included in the estimate of the length distribution of admixed segments,
+leading to a bias by considering them while fitting them to the
+distribution. Besides this, admixture segments can also
+get lost by genetic drift, resulting in less data and noisier fitting.
+Moreover, an additional admixture event as shown in Figure
+\ref{fig:Intro_fig} B after the Neandertal admixture event between the
+African and admixed non-African population was shown to potentially
+influence the detected amount of Neandertal ancestry
+(\cite{petr_limits_2019}) as well as the time estimates
+(\cite{sankararaman_date_2012}).
+
+Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
+positions in the admixed population are considered where both source
+populations are diverged from each other, to an even stricter scheme. The Higher-Enrichment Scheme (HES) requiring additional
+to the LES non-Africans to be polymorphic at a SNP. The potential bias using an ascertainment scheme can arise, when
+introgressed variants from the ancestral archaic population are
+ascertained using only a few sequenced archaic individuals as proxies
+for the actual introgressing archaic population (in our case 3)
+(\cite{sankararaman_date_2012,fu_genome_2014,sankararaman_combined_2016,moorjani_genetic_2016}). A to strict scheme might leave out variants, where not ascertaining strict enough can lead to inclusion of many non-introgressed variants. 
+Finally we investigated the bias introduced by setting a certain offset of distances between pairs of SNPs for which the LD is calculated. This minimal distance excludes very short range LD potentially not caused by introgressed variants but by demographic processes. However, since extent of ancient ALD is on a similar range then LD caused by other processes the minimal distance has the potential to bias estimates by either excessively including non-ALD SNP pairs or excluding to many. We altered the minimal distance from 0.02 cM to 0.05 cM 
+
+
+
+
+
+We simulated every combination of these
 parameter sets resulting in 32 different sets with 100 replications each
 (Supp. Fig. \ref{fig:figS1}). A GLM was applied to
 estimate effect sizes of the four predictors being ascertainment scheme,
